# toolsmith

./: .env.example  .gitignore  CLAUDE.md  MODEL_CARD_TEMPLATE.md  README.md  TOOLSMITH_BUILD_INSTRUCTIONS.md  TOOLSMITH_USER_STEPS.md  ToolSmith_Project_Plan.md  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml
docs/: architecture.mmd  eval_gate_verification.md
notebooks/src/: 01_sft_warmstart.py  02_grpo_training.py  03_export_gguf.py  04_live_demo.py
scripts/: audit_trajectories.py  auth_google.py  collect_trajectories.py  eval_gate.py  generate_eval_gate_fixtures.py  generate_gold_trajectories.py  generate_gold_trajectories_local.py  generate_sandbox_world.py  generate_tasks.py  generate_tasks_local.py  prep_sft_data.py  record_demo_gif.sh  sanity_eval.py  select_curated_trajectories.py  upload_dataset.py  validate_tasks.py
scripts/fixtures/: intentional_reward_regression.patch
scripts/task_generation/: __init__.py  common.py  t1.py  t1a.py  t1b.py  t2.py  t3.py  t4.py
space/: README.md  app.py  live_tab.py  replay_tab.py  requirements.txt
src/toolsmith/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_e2e_smoke.py  test_generate_sandbox_world.py  test_network_guard.py  test_utils.py
tests/data/: test_decision_points.py  test_prompts.py  test_solver.py  test_taskspec.py
tests/env/: test_anthropic_export.py  test_anthropic_model.py  test_cli.py  test_executor.py  test_llamacpp_model.py  test_model.py  test_openai_export.py  test_openai_model.py  test_parser.py  test_prompts.py  test_runner.py  test_state.py  test_truncation.py
tests/eval/: test_bfcl_adapter.py  test_judge.py  test_plots.py  test_runner.py  test_stats.py
tests/fixtures/: eval_gate_cases.jsonl
tests/rewards/: test_composite.py  test_efficiency_rewards.py  test_format_rewards.py  test_goalcheck.py  test_outcome_reward.py
tests/scripts/: test_audit_trajectories.py  test_collect_trajectories.py  test_eval_gate.py  test_generate_gold_trajectories.py  test_generate_gold_trajectories_local.py  test_sanity_eval.py  (+5 more)
(+93 files in other folders)
