[project]
name = "toolsmith-agent"
version = "0.1.0"
description = "Post-trained small-LLM tool-calling agent with a deterministic travel-ops sandbox"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-socket>=0.7", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--disable-socket"
markers = ["allow_network: permit real network calls in this test (reserved, unused)"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
