[project]
name = "toolsmith-agent"
version = "0.1.0"
description = "Post-trained small-LLM tool-calling agent with a deterministic travel-ops sandbox"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=5.0.0",
    "fastmcp>=3.4.3",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "llama-cpp-python>=0.3.33",
    "matplotlib>=3.11.0",
    "pydantic>=2.7",
]

[project.scripts]
toolsmith = "toolsmith.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-socket>=0.7", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = ["allow_network: permit real network calls in this test (reserved, unused)"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "hypothesis>=6.156.2",
]
